--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,12 @@ services:
     image: mysql:5.5
     ports:
       - 3306:3306
+    volumes:
+      - ./dump/:/docker-entrypoint-initdb.d/
     environment:
       MYSQL_DATABASE: acuDb
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
       MYSQL_ROOT_PASSWORD: root
   apache: 
     build: .
